--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -90,7 +90,6 @@
 								<include>${project.build.webapp.resourcedir}/jquery/plugins/ui/jquery-ui.js</include>
 								<include>${project.build.webapp.resourcedir}/bootstrap/js/bootstrap.js</include>
 								<include>${project.build.webapp.resourcedir}/javascript/bs/bootstrap-datepicker.js</include>
-								<include>${project.build.webapp.resourcedir}/javascript/bs/bootstrap-carousel.js</include>
 								<include>${project.build.webapp.resourcedir}/javascript/bs/bootstrap-tagsinput.js</include>
 								<include>${project.build.webapp.resourcedir}/javascript/bs/bootstrap-dialog.js</include>
 								<include>${project.build.webapp.resourcedir}/javascript/bs/holder.js</include>
@@ -104,6 +103,7 @@
 								<include>${project.build.webapp.resourcedir}/javascript/bs/jquery.fadebox.js</include>
 								<include>${project.build.webapp.resourcedir}/javascript/bs/userRelation.js</include>
 								<include>${project.build.webapp.resourcedir}/javascript/bs/addToSpheres.js</include>
+								<include>${project.build.webapp.resourcedir}/javascript/logging.js</include>
 							</includes>
 						</aggregation>
 						<aggregation>
