--- a/bibsonomy-search-elasticsearch/pom.xml
+++ b/bibsonomy-search-elasticsearch/pom.xml
@@ -18,6 +18,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
+			<artifactId>bibsonomy-database</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.bibsonomy</groupId>
 			<artifactId>bibsonomy-search</artifactId>
 			<version>3.3.0-SNAPSHOT</version>
 		</dependency>
