--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -430,7 +430,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
-			<artifactId>bibsonomy-lucene</artifactId>
+			<artifactId>bibsonomy-search-elasticsearch</artifactId>
 		</dependency>
 		<!-- *** beanutils 1.7.0 contain a memory leak *** we don't have a direct 
 			dependency to beanutils, but some lib needs it so we override here to the 
