--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -66,27 +66,18 @@ recaptcha.recaptchaServer = http://api.recaptcha.net
 # Memento configuration
 memento.timegate = http://timetravel.mementoweb.org/memento
 
-# Lucene Configuration
-# update the lucene index?
-lucene.enableUpdater = true
-# base path to all indices
-lucene.index.basePath = ${project.files.home}/lucene48/
-# possible values: 
-#    - decimal number
-#    - LIMITED (sets lucene's default value)
-#    - UNLIMITED
-lucene.index.maxFieldLength = 5000
-# should lucene search for tags?
-lucene.tagCloud.enabled = true
-# the limit of the tag cloud when searching the index
-lucene.tagCloud.limit = 1000
+# full text search configuration
+# update the search index
+search.enableUpdater = true
+
+# TODO: used?
+search.index.maxFieldLength = 5000
 
 # Elasticsearch IP and port, if we have multiple addresses, they
 # will be separated by "," and port and ip are separated by ":"
-es.address =
+search.es.address =
 # Elasticsearch cluster name e.g. elasticsearch
-es.cluster.name =
-es.project.home = ${project.home}
+search.es.cluster.name = 
 
 genealogy.import.user = genealogie
 
