replaced lucene with search (forgotten files)

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -75,7 +75,7 @@ search.index.maxFieldLength = 5000
 
 # Elasticsearch IP and port, if we have multiple addresses, they
 # will be separated by "," and port and ip are separated by ":"
-search.es.address =
+search.es.address = 
 # Elasticsearch cluster name e.g. elasticsearch
 search.es.cluster.name = 
 
@@ -217,16 +217,16 @@ database.recommender.item.removeAbandonedTimeout = ${database.main.removeAbandon
 database.recommender.item.username = ${database.recommender.tag.username}
 database.recommender.item.password = ${database.recommender.tag.password}
 
-# lucene database (only read only; maybe slave for performance)
-database.lucene.driverClassName = ${database.slave.driverClassName}
-database.lucene.url = ${database.main.url}
-database.lucene.maxIdle = ${database.main.maxIdle}
-database.lucene.maxActive = ${database.main.maxActive}
-database.lucene.maxWait = ${database.main.maxWait}
-database.lucene.removeAbandoned = ${database.main.removeAbandoned}
-database.lucene.removeAbandonedTimeout = ${database.main.removeAbandonedTimeout}
-database.lucene.username = bibsonomy_lucene
-database.lucene.password = ${database.main.password}
+# search database (only read only; maybe slave for performance)
+database.search.driverClassName = ${database.main.driverClassName}
+database.search.url = ${database.main.url}
+database.search.maxIdle = ${database.main.maxIdle}
+database.search.maxActive = ${database.main.maxActive}
+database.search.maxWait = ${database.main.maxWait}
+database.search.removeAbandoned = ${database.main.removeAbandoned}
+database.search.removeAbandonedTimeout = ${database.main.removeAbandonedTimeout}
+database.search.username = bibsonomy_lucene
+database.search.password = ${database.main.password}
 
 # opensocial database
 database.opensocial.driverClassName = ${database.main.driverClassName}
