migrated es tests to new module

--- a/bibsonomy-search/src/test/resources/search-test.properties
+++ b/bibsonomy-search/src/test/resources/search-test.properties
@@ -1,7 +1,7 @@
 # database settings by default main database
 # NOTE: don't forget to setup database-test.properties in the database module
 
-database.search.driverClassName = ${database.main.driverClassName}
+database.search.driverClassName = com.mysql.jdbc.Driver
 database.search.url = ${database.main.url}
 database.search.username = ${database.main.username}
 database.search.password = ${database.main.password}
