--- a/pom.xml
+++ b/pom.xml
@@ -662,6 +662,12 @@
 			</dependency>
 			<dependency>
 				<groupId>org.bibsonomy</groupId>
+				<artifactId>bibsonomy-search</artifactId>
+				<version>${project.version}</version>
+				<type>test-jar</type>
+			</dependency>
+			<dependency>
+				<groupId>org.bibsonomy</groupId>
 				<artifactId>bibsonomy-search-elasticsearch</artifactId>
 				<version>${project.version}</version>
 			</dependency>
