property to disable index update

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -68,10 +68,7 @@ memento.timegate = http://timetravel.mementoweb.org/memento
 
 # full text search configuration
 # update the search index
-search.enableUpdater = true
-
-# TODO: used?
-search.index.maxFieldLength = 5000
+search.update.enabled = true
 
 # Elasticsearch IP and port, if we have multiple addresses, they
 # will be separated by "," and port and ip are separated by ":"
