removed German path from firefox link Thank you André!

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -9,7 +9,7 @@ project.files.home = ${user.home}
 project.img = 
 project.blog  = http://blog.bibsonomy.org
 
-# used by PUMA (e.g. Universit‰tsbibliothek Kassel)
+# used by PUMA (e.g. Universit√§tsbibliothek Kassel)
 project.provider =  
 
 project.defaultLocale = en
@@ -31,7 +31,7 @@ project.theme = bibsonomy
 project.addons.available = chrome,firefox,safari
 #BibSonomy buttons
 project.addons.chrome.url = https://chrome.google.com/webstore/detail/bibsonomy-buttons/lbbnooihfnhphbgeajgmpmaedkdjgeid
-project.addons.firefox.url = https://addons.mozilla.org/de/firefox/addon/bibsonomy-buttons/
+project.addons.firefox.url = https://addons.mozilla.org/firefox/addon/bibsonomy-buttons/
 #PUMA buttons
 #project.addons.chrome.url = https://chrome.google.com/webstore/detail/puma-buttons/emdfjhapplcngnmhllpdmaecgoafjjmc
 #project.addons.firefox.url = https://addons.mozilla.org/en-US/firefox/addon/puma-buttons/
