--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -9,7 +9,7 @@ project.files.home = ${user.home}
 project.img = 
 project.blog  = http://blog.bibsonomy.org
 
-# used by PUMA (e.g. Universit√§tsbibliothek Kassel)
+# used by PUMA (e.g. Universit‰tsbibliothek Kassel)
 project.provider =  
 
 project.defaultLocale = en
