--- a/bibsonomy-pingback/pom.xml
+++ b/bibsonomy-pingback/pom.xml
@@ -39,7 +39,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.4.0-SNAPSHOT</version>
+		<version>3.4.0</version>
 	</parent>
 	<licenses>
 		<license>
