--- a/bibsonomy-common/pom.xml
+++ b/bibsonomy-common/pom.xml
@@ -53,4 +53,12 @@
 			<artifactId>commons-logging</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+	</build>
 </project>
