--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/web.xml
@@ -57,7 +57,7 @@
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 		<init-param>
 			<param-name>contextAttribute</param-name>
-			<param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.bibsonomy2</param-value>
+			<param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.bibsonomy</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
@@ -85,7 +85,7 @@
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 		<init-param>
 			<param-name>contextAttribute</param-name>
-			<param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.bibsonomy2</param-value>
+			<param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.bibsonomy</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
@@ -142,14 +142,14 @@
 
 	<!-- spring main servlet -->
 	<servlet>
-		<servlet-name>bibsonomy2</servlet-name>
+		<servlet-name>bibsonomy</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
 	<!-- spring main servlet -->
 	<servlet-mapping>
-		<servlet-name>bibsonomy2</servlet-name>
+		<servlet-name>bibsonomy</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
