made metadataprovide configurable
fixed #2410

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -131,20 +131,25 @@ auth.saml.keystore.pass =
 auth.saml.keystore.key.alias = 
 # Password of the key in the keystore
 auth.saml.keystore.key.pass = 
-# A file containing the metadata of the  Shibboleth Identity Provider (and other IdPs und SPs)
-auth.saml.idp.1.metadata.file =
 # The entity name of the used IdentityProvider from the metadata file
 auth.saml.defaultIdp =
 # name of the attribute from Shibboleth, that contains the remote-user-name
 auth.saml.attr.userId =
 # use https consumerservice urls in metadata and for callback urls inside requests which are sent to the idp
 auth.saml.useHttps = false
+# mapping saml attributes to our user model (e.g. realname)
+auth.saml.attr.map = {}
 
+# configure the metadata provider (possible values filesystemMetadataProvider, httpMetadataProvider)
+auth.saml.metadata.provider = filesystemMetadataProvider
+# A file containing the metadata of the Shibboleth Identity Provider (and other IdPs und SPs)
+auth.saml.idp.1.metadata.file =
+# url for the httpMetadataProvider
+auth.saml.idp.1.metadata.url = 
 # json map structure mapping from parameter values given to http://localhost:8080/logout?redirectKey= to redirect urls
 logout.redirect.map = {}
 
 # URL to inform a remote-system (vuFind) about a limited user activation
-#limited_account.redirect_url = http://141.51.167.153/vufind/puma/PumaUserActivation
 limited_account.redirect_url = 
 
 # URLs appearing in bibtex field 'biburl' for exports linked from vufind
