caching of recaptcha client
move request param rewrite to url_rewrite

added todos und fixmes

cleanup

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -62,6 +62,8 @@ recaptcha.privateKey = privateKey
 recaptcha.publicKey = publicKey
 # if you want to use SSL, then use this: http://secure-api.recaptcha.net
 recaptcha.recaptchaServer = http://api.recaptcha.net
+recaptcha2.server = https://www.google.com/recaptcha/api/siteverify
+
 
 # Memento configuration
 memento.timegate = http://timetravel.mementoweb.org/memento
