using urlgenerator for tag links
cleaned up code

renamed cv tag for tags to "tags"

renamed some attributes

moved copy paste code to TagViewUtils class

--- a/bibsonomy-wiki/pom.xml
+++ b/bibsonomy-wiki/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bibsonomy</groupId>
+			<artifactId>bibsonomy-web-common</artifactId>
+			<type>test-jar</type>
+		</dependency>
 	</dependencies>
 	<!-- TODO: deploy wiki to biblicious and remove the repository -->
 	<repositories>
