started update of urlrewrite filter

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/web.xml
@@ -138,6 +138,7 @@
 	<filter-mapping>
 		<filter-name>UrlRewriteFilter</filter-name>
 		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
 
 	<!-- spring main servlet -->
