added project.provider.url to config (UB Stuttgart)

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -13,7 +13,8 @@ project.social.google-plus = 102073418538419220890
 project.social.facebook = 
 
 # used by PUMA (e.g. Universitätsbibliothek Kassel)
-project.provider =  
+project.provider = 
+project.provider.url = 
 
 project.defaultLocale = en
 
