reporting can be disabled by properties file not bounded to the puma theme

--- a/bibsonomy-webapp/src/main/resources/theme_puma.properties
+++ b/bibsonomy-webapp/src/main/resources/theme_puma.properties
@@ -1,29 +1,11 @@
-# CSS
-stylesheet.additional = /resources_puma/css/puma.css
-stylesheet.additional.print = /resources_puma/css/print.css
-
 # JavaScript
-javascript.additional = /resources_puma/javascript/tools.js
-javascript.openaccess = /resources_puma/javascript/openaccess.js
+javascript.additional = 
 javascript.classification = /resources_puma/javascript/classification.js
-javascript.carousel = /resources/javascript/bs/carousel.js
-
 
 # Images
-image.background = /themes/cool/img/coolBg.jpg
-image.head.logo = /resources_puma/image/puma_logo.png
-image.head.logo.mobile = /resources_puma/image/mobile/puma_2b_comic_150_3_mobile.png
-image.button.video = /resources_puma/image/puma-video.png
-
-# login image base. will be added with login method and ".png"
-# e.g. /resources/image/login_logo_LDAP.png  
-# available login methods: INTERNAL, LDAP, OPENID 
-image.login.base = /resources_puma/image/login_logo_
-
 # image.snippet.bookmarkit without leading slash
 image.snippet.bookmarkit = resources_puma/image/bookmarkIt.png
 
-#other
+# other
 favicon.path = /resources_puma/image/favicon.gif
 favicon.type = image/gif
-
