--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -83,6 +83,8 @@ genealogy.import.user = genealogie
 
 # SWORD Configuration
 publication.reporting.mode = ALL
+publication.reporting.enabled = false
+
 sword.dirTemp = /tmp/
 sword.httpServer = host.domain.tld
 sword.httpPort = 8080
