added layout settings for home header (used by UB Stuttgart)

--- a/bibsonomy-webapp/src/main/resources/theme_puma.properties
+++ b/bibsonomy-webapp/src/main/resources/theme_puma.properties
@@ -6,6 +6,10 @@ javascript.classification = /resources_puma/javascript/classification.js
 # image.snippet.bookmarkit without leading slash
 image.snippet.bookmarkit = resources_puma/image/bookmarkIt.png
 
+# Layout
+layout.home.header = carousel
+layout.home.header.simple.img = 
+
 # other
 favicon.path = /resources_puma/image/favicon.gif
 favicon.type = image/gif
