--- a/bibsonomy-webapp/src/main/resources/theme_bibsonomy.properties
+++ b/bibsonomy-webapp/src/main/resources/theme_bibsonomy.properties
@@ -6,6 +6,10 @@ javascript.classification =
 # image.snippet.bookmarkit ohne führenden slash
 image.snippet.bookmarkit = resources/image/bookmarkIt.png
 
+# Layout
+layout.home.header = simple
+layout.home.header.simple.img = 
+
 #other
 favicon.path = 
 favicon.type = 
