added recaptcha2 config parameters

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -62,6 +62,11 @@ recaptcha.privateKey = privateKey
 recaptcha.publicKey = publicKey
 # if you want to use SSL, then use this: http://secure-api.recaptcha.net
 recaptcha.recaptchaServer = http://api.recaptcha.net
+#
+# recaptcha 2 configuration
+#
+recaptcha2.secretKey = secretKey
+recaptcha2.siteKey = sitekey
 recaptcha2.server = https://www.google.com/recaptcha/api/siteverify
 
 
