removed old recaptcha in favour of recaptcha2

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -39,7 +39,7 @@ project.addons.firefox.url = https://addons.mozilla.org/firefox/addon/bibsonomy-
 project.groupcreationmode = requestedbased
 
 
-# possible values: reCaptcha, mockCaptcha
+# possible values: reCaptcha2, mockCaptcha
 project.bean.captcha = mockCaptcha
 # possible values: realPingback, mockPingback
 project.bean.pingback = realPingback
@@ -55,13 +55,6 @@ project.urlScheme = ${project.theme}
 project.statistics.service.url = 
 project.statisitics.siteid = 
 
-#
-# recaptcha configuration
-#
-recaptcha.privateKey = privateKey
-recaptcha.publicKey = publicKey
-# if you want to use SSL, then use this: http://secure-api.recaptcha.net
-recaptcha.recaptchaServer = http://api.recaptcha.net
 #
 # recaptcha 2 configuration
 #
