--- a/bibsonomy-common/pom.xml
+++ b/bibsonomy-common/pom.xml
@@ -39,7 +39,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.5.0</version>
+		<version>3.5.1-SNAPSHOT</version>
 	</parent>
 	<licenses>
 		<license>
