--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -148,6 +148,11 @@ auth.saml.metadata.provider = filesystemMetadataProvider
 auth.saml.idp.1.metadata.file =
 # url for the httpMetadataProvider
 auth.saml.idp.1.metadata.url = 
+
+# configure prechecker (possible defaultSAMLPreChecker, requiredAttributesChecker)
+auth.saml.prechecker = defaultSAMLPreChecker
+auth.saml.prechecker.requiredAttribures = {}
+
 # json map structure mapping from parameter values given to http://localhost:8080/logout?redirectKey= to redirect urls
 logout.redirect.map = {}
 
