added config of required and optional fields while registering users (SAML)

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -107,6 +107,9 @@ auth.order = internal,openid,httpbasic
 # disables the registration (currently only the link-rendering), this is used by some pumas
 auth.register.disabled = false
 
+# SAML register fields (possible values: realname, gender, place, homepage
+auth.register.saml.fields.required = 
+auth.register.saml.fields.optional = realname,gender,place,homepage
 # 
 # LDAP Config
 # server; don't forget to set the rootDn
