--- a/bibsonomy-layout/pom.xml
+++ b/bibsonomy-layout/pom.xml
@@ -94,7 +94,7 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 			<scope>test</scope>
