--- a/bibsonomy-recommender-connector/src/test/resources/recommender-test.properties
+++ b/bibsonomy-recommender-connector/src/test/resources/recommender-test.properties
@@ -1,5 +1,16 @@
 database.datasource.class = org.apache.commons.dbcp.BasicDataSource
 
+# main database
+database.main.driverClassName = com.mysql.jdbc.Driver
+database.main.url = ${database.main.url}
+database.main.maxIdle = 50
+database.main.maxActive = 260
+database.main.maxWait = 10000
+database.main.removeAbandoned = true
+database.main.removeAbandonedTimeout = 300
+database.main.username = ${database.main.username}
+database.main.password = ${database.main.password}
+
 # tag recommender database
 database.recommender.tag.driverClassName = com.mysql.jdbc.Driver
 database.recommender.tag.url = ${database.recommender.tag.url}
