--- a/bibsonomy-search/pom.xml
+++ b/bibsonomy-search/pom.xml
@@ -44,6 +44,12 @@
 			<groupId>org.bibsonomy</groupId>
 			<artifactId>bibsonomy-database</artifactId>
 		</dependency>
+		<!-- for extracting text from pdfs -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.9</version>
+		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
 			<artifactId>bibsonomy-common</artifactId>
