--- a/bibsonomy-opensocial/pom.xml
+++ b/bibsonomy-opensocial/pom.xml
@@ -36,7 +36,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.5.1-SNAPSHOT</version>
+		<version>3.5.1</version>
 	</parent>
 	
 	<licenses>
