added preferred.login config for puma ub stuttgart

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -106,6 +106,8 @@ cron.fulltextsearch.regenerate.enabled.bookmark = ${cron.fulltextsearch.regenera
 auth.order = internal,openid,httpbasic
 # disables the registration (currently only the link-rendering), this is used by some pumas
 auth.register.disabled = false
+# sets the preferred login method (shown on homepage and in the navigation bar, no effect on /login)
+auth.preferred.login =
 
 # SAML register fields (possible values: realname, gender, place, homepage
 auth.register.saml.fields.required = 
