--- a/bibsonomy-synchronization/pom.xml
+++ b/bibsonomy-synchronization/pom.xml
@@ -72,6 +72,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
+			<artifactId>bibsonomy-web-common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.bibsonomy</groupId>
 			<artifactId>bibsonomy-database</artifactId>
 			<scope>test</scope>
 		</dependency>
