--- a/bibsonomy-web-common/pom.xml
+++ b/bibsonomy-web-common/pom.xml
@@ -1,33 +1,19 @@
 <?xml version="1.0"?>
-<!--
-
-    BibSonomy-Web-Common - Common things for web
-
-    Copyright (C) 2006 - 2015 Knowledge & Data Engineering Group,
-                                  University of Kassel, Germany
-                                  http://www.kde.cs.uni-kassel.de/
-                              Data Mining and Information Retrieval Group,
-                                  University of Würzburg, Germany
-                                  http://www.is.informatik.uni-wuerzburg.de/en/dmir/
-                              L3S Research Center,
-                                  Leibniz University Hannover, Germany
-                                  http://www.l3s.de/
-
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU Lesser General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU Lesser General Public License for more details.
-
-    You should have received a copy of the GNU Lesser General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!-- BibSonomy-Web-Common - Common things for web Copyright (C) 2006 - 2015 
+	Knowledge & Data Engineering Group, University of Kassel, Germany http://www.kde.cs.uni-kassel.de/ 
+	Data Mining and Information Retrieval Group, University of Würzburg, Germany 
+	http://www.is.informatik.uni-wuerzburg.de/en/dmir/ L3S Research Center, Leibniz 
+	University Hannover, Germany http://www.l3s.de/ This program is free software: 
+	you can redistribute it and/or modify it under the terms of the GNU Lesser 
+	General Public License as published by the Free Software Foundation, either 
+	version 3 of the License, or (at your option) any later version. This program 
+	is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
+	without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
+	PURPOSE. See the GNU Lesser General Public License for more details. You 
+	should have received a copy of the GNU Lesser General Public License along 
+	with this program. If not, see <http://www.gnu.org/licenses/>. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>bibsonomy</artifactId>
@@ -91,10 +77,16 @@
 			<version>2.7.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>stringtemplate</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>jtidy</groupId>
 			<artifactId>jtidy</artifactId>
 			<version>8.0-SNAPSHOT</version>
-			<!-- dom3-xml-apis is a strange duplicate of xml-apis (cf http://sourceforge.net/tracker/?func=detail&aid=2832643&group_id=136013&atid=737763 ) -->
+			<!-- dom3-xml-apis is a strange duplicate of xml-apis (cf http://sourceforge.net/tracker/?func=detail&aid=2832643&group_id=136013&atid=737763 
+				) -->
 			<exclusions>
 				<exclusion>
 					<groupId>xerces</groupId>
