--- a/bibsonomy-suggestionservice/pom.xml
+++ b/bibsonomy-suggestionservice/pom.xml
@@ -34,7 +34,7 @@
 	<parent>
 		<artifactId>bibsonomy</artifactId>
 		<groupId>org.bibsonomy</groupId>
-		<version>3.6.0-SNAPSHOT-SNAPSHOT</version>
+		<version>3.6.0-SNAPSHOT</version>
 	</parent>
 	<licenses>
 		<license>
