added config for help content location

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -25,6 +25,7 @@ project.document.path = ${project.files.home}/bibsonomy_docs/
 project.document.temp = ${project.files.home}/bibsonomy_temp/
 project.picture.path  = ${project.files.home}/bibsonomy_pics/
 
+project.help.path = ${project.files.home}/help/
 
 project.theme = bibsonomy
 # FIXME: this property currently does not allow to disable one specific addon
