changed default value for publication.reporting.enabled

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -81,7 +81,7 @@ genealogy.activated = true
 
 # SWORD Configuration
 publication.reporting.mode = ALL
-publication.reporting.enabled = true
+publication.reporting.enabled = false
 
 sword.dirTemp = /tmp/
 sword.httpServer = host.domain.tld
