renamed recommender-connector module to recommender

--- a/bibsonomy-recommender/pom.xml
+++ b/bibsonomy-recommender/pom.xml
@@ -32,7 +32,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<name>BibSonomy-Recommendation-Connector</name>
-	<artifactId>bibsonomy-recommender-connector</artifactId>
+	<artifactId>bibsonomy-recommender</artifactId>
 	<packaging>jar</packaging>
 	<description>Connector for the recommender framework for tag and resource recommendation</description>
 	<properties>
