--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -320,7 +320,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
-			<artifactId>bibsonomy-recommender-connector</artifactId>
+			<artifactId>bibsonomy-recommender</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
