system wide openurl resolver

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -1,7 +1,10 @@
 project.name  = BibLicious
 # address INCLUDING the trailing slash!
 project.home  = http://localhost:8080/
+
 system.mode.readOnly = false
+
+project.theme = bibsonomy
 
 project.files.home = ${user.home}
 
@@ -27,7 +30,6 @@ project.picture.path  = ${project.files.home}/bibsonomy_pics/
 
 project.help.path = ${project.files.home}/help/
 
-project.theme = bibsonomy
 # FIXME: this property currently does not allow to disable one specific addon
 project.addons.available = chrome,firefox,safari
 #BibSonomy buttons
@@ -49,6 +51,8 @@ project.bean.syncclient = realSynchronizationClient
 
 project.urlScheme = ${project.theme}
 
+# a system wide OpenURL provider
+system.openurl.provider = 
 
 # 
 # for piwik statistics tool
