--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/web.xml
@@ -72,7 +72,7 @@
 		<init-param>
 			<description>The pattern defines, which URLs should not be touched by the filter.</description>
 			<param-name>excludePattern</param-name>
-			<param-value>^/(api|resources|resources_puma|ajax)/.*</param-value>
+			<param-value>^/(api|resources|resources_puma|ajax|layoutinfo)/.*</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
