--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -114,6 +114,7 @@
 										<include>${project.build.webapp.resourcedir}/javascript/userRelation.js</include>
 										<include>${project.build.webapp.resourcedir}/javascript/addToSpheres.js</include>
 										<include>${project.build.webapp.resourcedir}/javascript/logging.js</include>
+										<include>${project.build.webapp.resourcedir}/clipboard/clipboard.js</include>
 									</includes>
 								</aggregation>
 								<aggregation>
