--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -100,9 +100,10 @@
 										<include>${project.build.webapp.resourcedir}/javascript/bootstrap-datepicker.js</include>
 										<include>${project.build.webapp.resourcedir}/select2/js/select2.full.js</include>
 										<include>${project.build.webapp.resourcedir}/javascript/bootstrap-tagsinput.js</include>
+										<!-- citeproc.js must be included before xmldom.js -->
+										<include>${project.build.webapp.resourcedir}/javascript/citeproc/citeproc.js</include>
 										<include>${project.build.webapp.resourcedir}/javascript/citeproc/xmldom.js</include>
 										<include>${project.build.webapp.resourcedir}/javascript/citeproc/csllocales.js</include>
-										<include>${project.build.webapp.resourcedir}/javascript/citeproc/citeproc.js</include>
 										<include>${project.build.webapp.resourcedir}/javascript/citeproc-wrapper.js</include>
 										<include>${project.build.webapp.resourcedir}/javascript/friendoverview.js</include>
 										<include>${project.build.webapp.resourcedir}/javascript/functions.js</include>
