--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -59,11 +59,11 @@
 			</plugin>
 			<plugin>
 				<groupId>org.bibsonomy</groupId>
-				<artifactId>javascript-maven-plugin</artifactId>
-				<version>1.0.0</version>
+				<artifactId>webresource-maven-plugin</artifactId>
+				<version>1.5.0-SNAPSHOT</version>
 				<executions>
 					<execution>
-						<id>javascript-compress-aggregation</id>
+						<id>webresource-compress-aggregation</id>
 						<phase>compile</phase>
 						<goals>
 							<goal>compress-aggregate</goal>
@@ -77,6 +77,7 @@
 									</excludes>
 									<includes>
 										<include>**/*.js</include>
+										<include>**/*.css</include>
 									</includes>
 									<copyExcludedFiles>true</copyExcludedFiles>
 									<outputDirectory>${project.build.webapp.resourcedir}</outputDirectory>
