--- a/bibsonomy-recommender/pom.xml
+++ b/bibsonomy-recommender/pom.xml
@@ -36,7 +36,7 @@
 	<packaging>jar</packaging>
 	<description>Tag and resource recommender.</description>
 	<properties>
-		<recommender.version>1.0.1-SNAPSHOT</recommender.version>
+		<recommender.version>1.0.1</recommender.version>
 	</properties>
 	
 	<parent>
