added csl.less to lesscss build plugin

--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -145,6 +145,7 @@
 					<compress>true</compress>
 					<includes>
 						<include>bootstrap-style.less</include>
+						<include>csl.less</include>
 					</includes>
 				</configuration>
 				<executions>
