--- a/bibsonomy-search-elasticsearch/pom.xml
+++ b/bibsonomy-search-elasticsearch/pom.xml
@@ -54,6 +54,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.bibsonomy</groupId>
+			<artifactId>bibsonomy-common</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.bibsonomy</groupId>
 			<artifactId>bibsonomy-search</artifactId>
 			<type>test-jar</type>
 			<scope>test</scope>
