--- a/bibsonomy-search-elasticsearch/pom.xml
+++ b/bibsonomy-search-elasticsearch/pom.xml
@@ -32,7 +32,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.7.1-SNAPSHOT</version>
+		<version>3.7.1</version>
 	</parent>
 	<artifactId>bibsonomy-search-elasticsearch</artifactId>
 	<properties>
