changed news group to dmir

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -176,7 +176,7 @@ export.bibtex.vufind.ebsco.biburl =
 password.reminder.cryptkey = abcdefg
 
 # controls the news displayed on the homepage
-news.group = kde
+news.group = dmir
 news.tag = bibsonomynews
 
 # comma separated list holding the consumer keys of OAuth clients that should not be deletable
