--- a/bibsonomy-rest-server/pom.xml
+++ b/bibsonomy-rest-server/pom.xml
@@ -38,7 +38,7 @@
 	<parent>
 		<groupId>org.bibsonomy</groupId>
 		<artifactId>bibsonomy</artifactId>
-		<version>3.7.3-SNAPSHOT</version>
+		<version>3.7.3</version>
 	</parent>
 	<licenses>
 		<license>
