added active directory ldap support

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -132,6 +132,14 @@ auth.ldap.ldapIdIsUsername = false
 
 auth.cookie.cryptkey = 37d7f7f81e341bd3a05fc5ae9a1ec4c9
 
+# AD Config
+# enable AD-LDAP login - replaces normal LDAP
+auth.ad.enabeld = false
+# domain the domain name (may be null or empty)
+auth.ad.domain = corp.example.com
+# url an LDAP url (or multiple URLs)
+auth.ad.url = ldap://127.0.0.1
+
 # a name that appears in the auto-generated saml metadata (historically bib_test2 but should be set to something nice)
 auth.saml.entityalias=bib_test2
 # Points to a keystore which contains the private key of the Shibboleth Service Provider
