updated project properties to configure the ldap authentication provider

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -118,6 +118,9 @@ auth.register.saml.fields.required =
 auth.register.saml.fields.optional = realname,gender,place,homepage
 # 
 # LDAP Config
+# configure the LDAP authentication provder - possible options adAuthenticationProvider or ldapAuthProvider
+auth.ldap.authenticationProvider ldapAuthProvider
+
 # server; don't forget to set the rootDn
 auth.ldap.server = ldap://127.0.0.1:33389/
 # possible values: simpleLdapBindAuthenticator, searchLdapBindAuthenticator
@@ -133,8 +136,6 @@ auth.ldap.ldapIdIsUsername = false
 auth.cookie.cryptkey = 37d7f7f81e341bd3a05fc5ae9a1ec4c9
 
 # AD Config
-# enable AD-LDAP login - replaces normal LDAP
-auth.ad.enabeld = false
 # domain the domain name (may be null or empty)
 auth.ad.domain = corp.example.com
 # url an LDAP url (or multiple URLs)
