AD - fixed property file - missing equals sign

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -119,7 +119,7 @@ auth.register.saml.fields.optional = realname,gender,place,homepage
 # 
 # LDAP Config
 # configure the LDAP authentication provder - possible options adAuthenticationProvider or ldapAuthProvider
-auth.ldap.authenticationProvider ldapAuthProvider
+auth.ldap.authenticationProvider = ldapAuthProvider
 
 # server; don't forget to set the rootDn
 auth.ldap.server = ldap://127.0.0.1:33389/
