added maxQuerySize property to database-test properties

--- a/bibsonomy-database/src/test/resources/database-test.properties
+++ b/bibsonomy-database/src/test/resources/database-test.properties
@@ -12,5 +12,6 @@ database.main.password = ${database.main.password}
 
 user.defaultToClassify = 1
 
+database.maxQuerySize = 1000
 
 createDatabaseBeforeLoading = true
