added link to safari extension gallery

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -35,9 +35,12 @@ project.addons.available = chrome,firefox,safari
 #BibSonomy buttons
 project.addons.chrome.url = https://chrome.google.com/webstore/detail/bibsonomy-buttons/lbbnooihfnhphbgeajgmpmaedkdjgeid
 project.addons.firefox.url = https://addons.mozilla.org/firefox/addon/bibsonomy-buttons/
+project.addons.safari.url = https://safari-extensions.apple.com/details/?id=org.bibsonomy.buttons-RQ8CG56FP3
 #PUMA buttons
 #project.addons.chrome.url = https://chrome.google.com/webstore/detail/puma-buttons/emdfjhapplcngnmhllpdmaecgoafjjmc
 #project.addons.firefox.url = https://addons.mozilla.org/firefox/addon/puma-buttons/
+#project.addons.safari.url = /resources/addons/safari/puma-buttons-extension/puma_buttons.safariextz
+
 # Group creation mode (requestedbased or automatic)
 project.groupcreationmode = requestedbased
 
