changed default setting for the groups and friends feature to deactivated

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/project.properties
@@ -282,5 +282,5 @@ bibliography.bibliographyUser =
 dev.messagesource.cache = -1
 
 # optional features of bibsonomy-webapp
-groupsandfriendsfeature.activated = true
+groupsandfriendsfeature.activated = false
 
