Backed out of changeset 25653:0410d55e7f24

--- a/bibsonomy-webapp/pom.xml
+++ b/bibsonomy-webapp/pom.xml
@@ -7,7 +7,7 @@
                                   University of Kassel, Germany
                                   http://www.kde.cs.uni-kassel.de/
                               Data Mining and Information Retrieval Group,
-                                  University of WÃ¼rzburg, Germany
+                                  University of Würzburg, Germany
                                   http://www.is.informatik.uni-wuerzburg.de/en/dmir/
                               L3S Research Center,
                                   Leibniz University Hannover, Germany
